# so101-robotic-learning

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
assets/mjcf/: so101_new_calib copy.xml
notebooks/bounce_rl/: notebook_train_ppo.ipynb  notebook_train_sac.ipynb  test_ping_pong_env.ipynb
scripts/bounce_rl/: debug.py  test_ppo.py  test_sac.py  train_ppo.py  train_reinforce.py  train_sac.py
src/bounce_rl/env/: bounce_env.py  pingpong_env.py
src/bounce_rl/rewards/: penalty_ball_below_paddle.py  ping_pong_reward.py  reward_ball_aligned_on_z_and_above_paddle.py  reward_ball_speed.py  reward_ball_vertical.py  reward_paddle_parallel.py  rewards.py
src/bounce_rl/rl/: debug.py  rl_utils.py  train.py  train_ppo.py  train_sac.py
src/bounce_rl/sim/: sim.py
src/so101_robotic_learning/bounce_rl/env/: bounce_env.py
src/so101_robotic_learning/bounce_rl/rewards/: penalty_ball_below_paddle.py  ping_pong_reward.py  reward_ball_aligned_on_z_and_above_paddle.py  reward_ball_in_interval.py  reward_ball_speed.py  reward_ball_vertical.py  reward_interval.py  reward_paddle_in_interval.py  reward_utils.py
src/so101_robotic_learning/bounce_rl/rl/: rl_utils.py  train_ppo.py  train_sac.py
